k8s/api-hub-ui-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-hub-ui
spec:
  replicas: 1
  selector:
    matchLabels:
      component: api-hub-ui
  template:
    metadata:
      labels:
        component: api-hub-ui
    spec:
      containers:
        - name: api-hub-ui
          # image: 118.70.80.38:5000/api-hub-ui:v1.0.4
          image: harbor.wise-paas.io/library/api-hub-ui:v-1.0.3
          resources:
            limits:
              cpu: "8"
              memory: 1024Mi
              ephemeral-storage: 128Mi
            requests:
              cpu: "2"
              memory: 512Mi
          ports:
            - containerPort: 3010
