k8s/api-hub-ui-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-hub-ui-service
spec:
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
  selector:
    component: api-hub-ui
