k8s/cluster-ip.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-hub-ui-service
spec:
  type: ClusterIP
  selector:
    component: api-hub-ui
  ports:
    - port: 3010
      targetPort: 3010
