k8s/ingress-service.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    # - host: grails.se.slave04.internal
    - http:
        paths:
          - pathType: Prefix 
            path: /test-k8s/?(.*)
            backend:
              service:
                name: client-cluster-ip-service
                port: 
                  number: 3000
