k8s/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: api-hub-ui
  annotations:
    kubernetes.io/ingress.class: nginx
    # nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: api-hub-ui.default.ensaas.en.internal
    - http:
        paths:
          - path: /
            backend:
              serviceName: api-hub-ui-service
              servicePort: 3010
